# TIMP-RK2

./: CMakeLists.txt  README.md  Strategy.cpp  Strategy.hpp
.github/workflows/: cmake-single-platform.yml
strategy/: Strategy.cpp  Strategy.hpp
tests/: Strategy_tests.cpp
