cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
project(Strategy)
add_executable(Strategy Strategy.cpp)
enable_testing()
add_subdirectory(third-party/gtest)
include_directories(third-party/gtest/googletest/include)
add_executable(test tests/Strategy.cpp.cpp)
target_link_libraries(test gtest gtest_main)
add_test(NAME test COMMAND test)
